--- a/index.html
+++ b/index.html
@@ -1,45 +1,23 @@
-*{padding:0;margin:0}
-	.clear{clear:both;overflow:hidden;}
-	.dadao{width: 800px;margin: 50px auto;}
-	ul li{list-style: none;}
-	.dadao li{
-		float: left;
-		width: 170px;
-		margin: 15px 10px;
-		padding: 5px;
-		border-radius:5px;
-		box-shadow: 0 0 2px rgba(0,0,0,0.5); 
-	}
-	.dadao li img{
-		width: 170px;
-		height: 120px;
-		border-radius:5px;
-		vertical-align: bottom; 
-	}
-	.dadao li:nth-child(1){
-	transform: rotate(30deg);
-}
-	.dadao li:nth-child(2){
-	transform: rotate(-5deg);
-}
-	.dadao li:nth-child(3){
-	transform: rotate(10deg);
-}
-	.dadao li:nth-child(4){
-	transform: rotate(-10deg);
-}
-	.dadao li:nth-child(5){
-	transform: rotate(30deg);
-}
-	.dadao li:nth-child(6){
-	transform: rotate(-20deg);
-}
-	.dadao li:nth-child(7){
-	transform: rotate(10deg);
-}
-	.dadao li:nth-child(8){
-	transform: rotate(-30deg);
-}
-	.dadao li:hover{
-		transform: rotate(0deg) scale(1.1);
-	}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>我的大刀早已饥渴难耐了-蛮族之王</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="zxc.css">
+	
+</head>
+<body>
+	<div class="dadao">
+		<ul>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23000.jpg">蛮王-泰达米尔</li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23001.jpg" >勇敢的心-泰达米尔</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23002.jpg">国王 泰达米尔</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none" ><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23003.jpg">诸神的黄昏 泰达米尔</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23004.jpg">恶魔之刃 泰达米尔</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23005.jpg">奥斯曼大帝 泰达米尔</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23006.jpg">关羽 云长</a></li>
+			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23007.jpg">梦魇 泰达米尔</a></li>
+		</ul>
+	</div>
+</body>
+</html>
