--- a/index.html
+++ b/index.html
@@ -1,23 +1,79 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>我的大刀早已饥渴难耐了-蛮族之王</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="zxc.css">
-	
-</head>
-<body>
-	<div class="dadao">
-		<ul>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23000.jpg">蛮王-泰达米尔</li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23001.jpg" >勇敢的心-泰达米尔</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23002.jpg">国王 泰达米尔</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none" ><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23003.jpg">诸神的黄昏 泰达米尔</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23004.jpg">恶魔之刃 泰达米尔</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23005.jpg">奥斯曼大帝 泰达米尔</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23006.jpg">关羽 云长</a></li>
-			<li><a href="http://lol.qq.com/web201310/info-defail.shtml?id=Tryndamere" style="text-decoration: none"><img src="http://ossweb-img.qq.com/images/lol/web201310/skin/big23007.jpg">梦魇 泰达米尔</a></li>
-		</ul>
-	</div>
-</body>
+
+	<head>
+		<meta charset="utf-8" />
+		<title>美食网 - 糖醋排骨</title>
+
+		<link rel="stylesheet" type="text/css" href="css/as.css" />
+
+	</head>
+
+	<body>
+		<div class="header">
+			<div class="login-bar">
+				<a class="qq-login" href="http://w.qq.com/">QQ登录</a>
+				<a class="wb-login" href="https://passport.weibo.cn/signin/welcome?entry=mweibo&r=http%3A%2F%2Fpad.weibo.cn%2F&_T_WM=e10991e474f5aa681c21caa40c43682c">
+					微博登录</a>
+			</div>
+			<div class="logo">
+				<img src="img/new_year_logo.gif" alt="美食网"/>
+			</div>
+			<ul class="zzz">
+				<li>
+					<a href="home.html">主页</a>
+				</li>
+				<li>
+					<a href="recipes.html">美食菜单</a>
+				</li>
+				<li>
+					<a href="suggest.html">讨论组</a>
+				</li>
+			</ul>
+		</div>
+		<div class="main-content">
+			<h2>凉拌拍黄瓜</h2>
+			<p>拍黄瓜，去外面吃饭的时候，很多地方都有这个拍黄瓜作为开胃的餐前小菜上桌。夏天吃黄瓜，我自己也喜欢做这种凉拌的拍黄瓜来吃，很是清脆爽口</p>
+			<p> 美食网所提供的各项服务的所有权和运作权均归美食网所有,点击查看美食网
+				<a href="legel.html" target="_blank">免责声明</a>
+			</p>
+			<h3>材料</h3>
+			<ul class="xxx">
+				<li>黄瓜</li>
+				<li>食盐  1小匙</li>
+				<li>蒜  2瓣</li>
+				<li>白糖  1/2小匙</li>
+				<li>植物油  1大匙 </li>
+				<li>酱油  1小匙</li>
+				<li>米醋  2小匙</li>
+				<li>牛肉酱  3小匙</li>
+				
+			</ul>
+			<h3>凉拌拍黄瓜的做法</h3>
+			<ol>
+				<li>蒜头拍扁，去衣，剁成蒜蓉；黄瓜清洗干净，撒上盐，用双手握住黄瓜搓擦两遍，冲洗干净</li>
+				<li>整根黄瓜用刀背拍裂，切成小段</li>
+				<li>装入大碗，用凉开水泡洗一下，沥干水分，加入盐</li>
+				<li>加入米醋，加入白糖拌匀</li>
+				<li>热锅冷油，小火爆香蒜蓉，加入牛肉酱，翻炒均匀</li>
+				<li>加入酱油，小火煮开，把煮开的酱汁淋入黄瓜中，拌匀即可食用，放冰箱冷藏1小时后口感更佳</li>
+			</ol>
+			<h3>美食图片</h3>
+			<ul class="photoes">
+				<li><img src="img/pai1.jpg"/></li>
+				<li><img src="img/pai2.jpg"/></li>
+				<li><img src="img/pai3.jpg"/></li>
+				<li><img src="img/pai4.jpg"/></li>
+				<li><img src="img/pai5.jpg"/></li>
+				<li><img src="img/pai6.jpg"/></li>
+				<li><img src="img/pai7.jpg"/></li>
+				<li><img src="img/pai8.jpg"/></li>
+				
+			</ul>
+		</div><!--.main-content 结束-->
+		<div class="footer">
+			<p>@copy;2015 - RecipeWorld - 美食网</p>
+		</div><!--.footer 结束-->
+	</body>
+
 </html>
